@@ -13,6 +13,9 @@ class AudioRenderChannelData
     std::vector< AudioBufferVec >   m_audioBuffers;
     std::vector< SizeType >         m_sizes;
 
+    // FIXME: This is hack. We must disable sending all channels to preview. Find better solution.
+    bool                            m_sendToPreview;
+
 public:
     void                            ClearBuffers    ();
 
@@ -24,6 +27,9 @@ public:
     AudioBufferVec                  GetData         ( SizeType sourceIdx ) const;
 
     SizeType                        DataSize        ( SizeType sourceIdx ) const;
+
+    bool                            SendToPreview   () const { return m_sendToPreview; }
+    void                            SendToPreview   ( bool enable ) { m_sendToPreview = enable; }
 };
 
 } // audio
