@@ -1,4 +1,5 @@
 Release 0.5x.x
+- Audio artifacts after enabling video input fixed.
 - Problem with silent VideoInputPlugin audio on preview fixed.
 
 Release 0.50.0
